update MY PORTFOLIO with new changes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ I love learning new technologies and improving my problem-solving skills through
 
     <div class="contact-info">
         <p><strong>Email:</strong> <a href="mailto:kajalkanaujiya40@gmail.com"  target="_blank">kajalkanaujiya40@gmail.com</a></p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kajal-kanaujiya-622907328" target="_blank">Visit Profile</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/kajal-kanaujiya-622907328" target="_blank"     rel="noopener noreferrer">Visit Profile</a></p>
         <p><strong>GitHub:</strong> <a href="https://github.com/Kajalkanaujiya128" target="_blank">Visit GitHub</a></p>
     </div>
 
